# LinGear

./: .gitignore  LICENSE  README.md  cluser_poject_cpp.sh  lingear  qt_cpp_install.sh  todo.txt
docs/: INSTALLATION.md  TESTING.md  TROUBLESHOOTING.md
installer/config/: autologin.conf  kiosk.service
installer/config/launchers/: lvgl-launcher.sh  qt-launcher.sh
installer/plymouth/: setup-plymouth.sh
installer/scripts/: dependency-checker.sh  install.sh  post-install.sh  pre-install.sh
installer/ui-frameworks/lvgl/: dependencies.txt  setup.sh
installer/ui-frameworks/qt/: dependencies.txt  setup.sh
installer/ui-frameworks/tkinter/: requirements.txt  setup.sh
preproject/: controller.sh  uninstall.sh
preproject/modules/: autologin_tty1.sh  bash_profile_autostart.sh  build_qt_app.sh  create_kiosk_scripts.sh  detect_user.sh  disable_display_manager.sh  grub_bootloader.sh  install_packages.sh  plymouth_theme.sh  setup_permissions.sh  systemd_service.sh  wrapper_config.sh
src/qt-app/: CMakeLists.txt
tests/: automated_install_test.sh
